@@ -48,6 +48,9 @@ class DDSWrapper_Export Subscription_Manager
   /// unregisters and deletes the topic from the domain
   void remove_topic (const Topic_Manager & topic);
 
+  /// creates and returns qos for data readers with the default values
+  DDS::DataReaderQos get_default_datareader_qos ();
+
   /// returns a data reader for a specific topic
   DDS::DataReader_ptr lookup_datareader (const std::string & topic_name);
 
