@@ -32,6 +32,12 @@ Subscription_Manager::remove_topic (const Topic_Manager & topic)
   return manager_impl_->remove_topic (topic);
 }
 
+ACE_INLINE DDS::DataReaderQos
+Subscription_Manager::get_default_datareader_qos ()
+{
+  return manager_impl_->get_default_datareader_qos ();
+}
+
 ACE_INLINE DDS::Subscriber_ptr
 Subscription_Manager::subscriber () const
 {
